# ltheory-old-test

./: .clang-format  .clang-tidy  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  NOTICE  README.md  SFML-Upgrade.md  SFML3Upg.md  configure.py  sfml-updates.md
docs/: ltsl-docs.md  ship-info.md
ext/SFML/: CMakeLists.txt
ext/SFML/cmake/Modules/: FindVorbis.cmake
extbin/osx/: libenet.dylib  libfmodevent.dylib  libfmodeventnet.dylib  libfmodex.dylib  libfreetype.dylib  libsfml-audio.2.dylib  libsfml-graphics.2.dylib  libsfml-network.2.dylib  libsfml-system.2.0.dylib  libsfml-window.2.dylib
include/UTF8/: unchecked.h
resource/script/: gameConfig.txt
resource/script/App/: colony.lts  hnn.lts  hud.lts  image.lts  launcher.lts  loading.lts  ltheory-main.lts  ltheory.lts  map.lts  market.lts  objectinfo.lts  platemesh.lts  threads.lts  ui.lts
resource/script/Object/: SystemPopulate.lts  WarpRail.lts
resource/script/Texture/: RandomScreenshot.lts
resource/script/Widget/: Button.lts  DebugScene.lts  ExitButton.lts  GameMenu.lts  ImageEditor.lts
resource/shader/common/: global.jsl
resource/shader/fragment/: planet.jsl  starbg.jsl
resource/shader/fragment/material/: metal.jsl
resource/shader/fragment/post/: grain.jsl
script/: install_dependencies.sh
src/launch/: launch.cpp
src/liblt/AI/: NLPPhrase.cpp  NLPPhrase.h
src/liblt/Audio/: Filters.cpp  Generator.h  Note.h
src/liblt/Audio/Signal/: Compress.cpp  Delay.cpp  Instrument.cpp  Lowpass.cpp
src/liblt/Component/: Account.h  Affectable.h  Asset.h  Assets.cpp  Assets.h  Attachable.h  Cargo.cpp  Cargo.h  Collidable.h  Crew.h  Damager.h  Database.h  Dockable.h  Drawable.h  Economy.h  Explodable.h  History.cpp  History.h  Info.h  Integrity.h  Interior.cpp  Interior.h  Log.cpp  Log.h  Market.cpp  Market.h  MissionBoard.h  Missions.h  Motion.cpp  Motion.h  MotionControl.h  Nameable.h  Navigable.h  Opinion.h  Orders.h  Orientation.cpp  Orientation.h  Pilotable.h  Pluggable.h  Projects.cpp  (+12 more)
src/liblt/Game/: Beam.cpp  Camera.cpp  Item.h  ItemWrapper.h  Messages.h  Mission.cpp  Object.cpp  ObjectWrapper.h  Player.cpp  Project.h  Signature.h  Socket.h  Task.h  Template.h  Universe.cpp
src/liblt/Game/Action/: Mine.cpp
src/liblt/Game/Attribute/: Capability.h  Color.h  Docks.h  Hash.h  Icon.h  Integrity.h  Mass.h  Metatype.h  Name.h  Object.h  Offset.h  PowerDrain.h  Range.h  Rate.h  Renderable.h  Scale.h  Seed.h  Sockets.h  Sound.h  Speed.h  Task.h  Traits.h  Uses.h  Value.h
src/liblt/Game/Event/: Damage.cpp  Mined.cpp
src/liblt/Game/Graphics/: RenderStyles.cpp
src/liblt/Game/Item/: Blueprint.cpp  Blueprint.h  DataDamaged.cpp  DataDestroyed.cpp  PlanetType.cpp  PowerGeneratorType.cpp  ProductionLabType.cpp  ScannerType.cpp  ShieldType.cpp  ShipType.cpp  StationType.h  TechLabType.cpp  ThrusterType.cpp  TransferUnitType.cpp  TurretType.cpp  WeaponType.h  Worker.cpp
src/liblt/Game/ItemProperty/: Owner.cpp
src/liblt/Game/Object/: Asteroid.cpp  Colony.cpp  Custom.cpp  DroneBay.cpp  DustFlecks.cpp  Explosion.cpp  Missile.cpp  Payload.cpp  Planet.cpp  Pod.cpp  PowerGenerator.cpp  ProductionLab.cpp  Pulse.cpp  Rail.cpp  Region.cpp  Scanner.cpp  Shield.cpp  Ship.cpp  SoundEmitter.cpp  Star.cpp  Station.cpp  System.cpp  TechLab.cpp  Thruster.cpp  Trail.cpp  TransferUnit.cpp  Turret.cpp  WarpNode.cpp  Weapon.cpp  Wormhole.cpp  Zone.cpp
src/liblt/Game/RenderPass/: Blended.cpp  Camera.cpp  Clear.cpp  DepthPrepass.cpp  DustClouds.cpp  GBuffer.cpp  GlobalLighting.cpp  LensFlares.cpp  LocalLighting.cpp  Particles.cpp  SMAA.cpp  SSAO.cpp  Visibility.cpp
src/liblt/Game/Renderable/: Imposter.cpp
src/liblt/Game/ScriptAPI/: Object.cpp
src/liblt/Game/Task/: Buy.cpp  Custom.cpp  Destroy.cpp  Dock.cpp  Drill.cpp  Goto.cpp  LOD.cpp  Manage.cpp  Mine.cpp  Mint.cpp  Patrol.cpp  Pirate.cpp  Play.cpp  Produce.cpp  Research.cpp  Sell.cpp  Spawn.cpp  Transport.cpp  Wait.cpp
src/liblt/Game/Widget/: HUD.cpp
src/liblt/LTE/: Archive.cpp  Archive.h  Array.h  AutoClass.h  Axis.cpp  BaseType.h  Bound.h  Buttons.cpp  CollisionMesh.cpp  CollisionMesh.h  Common.h  CubeMap.cpp  DeclareFunction.h  Diff.cpp  Diff.h  Distribution.h  Environment.h  Expression.cpp  Expressions.h  Font.cpp  Font.h  Function.h  GL.h  GLType.h  Generic.h  Grammar.cpp  Grammar.h  InternalList.h  Job.h  Joystick.cpp  Joystick.h  Keyboard.cpp  Loader.cpp  Location.cpp  Lock.cpp  Lock.h  Map.h  Matrix.h  Mesh.h  Model.h  (+59 more)
src/liblt/LTE/Button/: And.cpp  Joystick.cpp  Key.cpp  Mouse.cpp  Or.cpp
src/liblt/LTE/Expression/: Access.cpp  Address.cpp  Array.cpp  Assign.cpp  Block.cpp  Constant.cpp  Constructor.cpp  Conversion.cpp  Declare.cpp  Dereference.cpp  DynamicDispatch.cpp  ExpressionCall.cpp  FunctionCall.cpp  If.cpp  Noop.cpp  Print.cpp  Reference.cpp  Return.cpp  Switch.cpp  Variable.cpp  While.cpp
src/liblt/LTE/RenderPass/: Bloom.cpp  BloomLight.cpp  Composite.cpp  CustomFilter.cpp  MotionBlur.cpp  RadialBlur.cpp
src/liblt/LTE/SDF/: Add.cpp  Box.cpp  Capsule.cpp  Cylinder.cpp  Expand.cpp  Intersection.cpp  Mirror.cpp  Multiply.cpp  Pinch.cpp  Polyhedron.cpp  Radial.cpp  Repeat.cpp  Ring.cpp  Scale.cpp  Shell.cpp  Sphere.cpp  Subtract.cpp  Torus.cpp  Translate.cpp  Union.cpp  Wedge.cpp
src/liblt/LTE/ScriptAPI/: Program.cpp  Thread.cpp
src/liblt/LTE/Warp/: Attractor.cpp  Custom.cpp
src/liblt/Module/: Common.h  FrameTimer.cpp  MusicEngine.cpp  MusicEngine.h  PhysicsEngine.cpp  PhysicsEngine.h  Scheduler.cpp  Settings.cpp  SettingsEntry.cpp  Sound.h  SoundEngine.h
src/liblt/Module/SoundEngine/: Fmod.cpp  Fmod.h  Null.cpp  SFML.cpp
src/liblt/Strukt/: CodeObject.h
src/liblt/Strukt/CodeObject/: Custom.cpp
src/liblt/UI/: ClipRegion.cpp  Compositor.h  Cursor.cpp  Icon.h  Interface.cpp  Interface.h  WidgetRenderer.cpp
src/liblt/UI/Compositor/: Basic.cpp  Custom.cpp  None.cpp
src/liblt/UI/Glyph/: Arc.cpp  Box.cpp  Circle.cpp  (+6 more)
src/old/ltheory/: ltheory-app.cpp  ltheory.cpp
tests/: CMakeLists.txt  Harness.h  TestSFML.cpp  TestSound.cpp  TestString.cpp  TestTexture2D.cpp  TestType.cpp  TestVectorArray.cpp  TestWindowInput.cpp  main.cpp
(+13 files in other folders)
